--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,15 +20,15 @@ jobs:
     - name: Build binaries
       run: |
         mkdir dist
-        GOOS=linux GOARCH=amd64 go build -ldflags="-s -w" -o dist/broadcast_linux .
-        GOOS=darwin GOARCH=amd64 go build -ldflags="-s -w" -o dist/broadcast_darwin .
-        GOOS=windows GOARCH=amd64 go build -ldflags="-s -w" -o dist/broadcast_windows.exe .
+        GOOS=linux GOARCH=amd64 go build -ldflags="-s -w" -o broadcast_linux .
+        GOOS=darwin GOARCH=amd64 go build -ldflags="-s -w" -o broadcast_darwin .
+        GOOS=windows GOARCH=amd64 go build -ldflags="-s -w" -o broadcast_windows.exe .
 
     - name: Upload Linux binary
       uses: actions/upload-release-asset@v1
       with:
         upload_url: ${{ github.event.release.upload_url }}
-        asset_path: dist/broadcast_linux
+        asset_path: broadcast_linux
         asset_name: broadcast-linux-amd64
         asset_content_type: application/octet-stream
 
@@ -36,7 +36,7 @@ jobs:
       uses: actions/upload-release-asset@v1
       with:
         upload_url: ${{ github.event.release.upload_url }}
-        asset_path: dist/broadcast_darwin
+        asset_path: broadcast_darwin
         asset_name: broadcast-darwin-amd64
         asset_content_type: application/octet-stream
 
@@ -44,6 +44,6 @@ jobs:
       uses: actions/upload-release-asset@v1
       with:
         upload_url: ${{ github.event.release.upload_url }}
-        asset_path: dist/broadcast_windows.exe
+        asset_path: broadcast_windows.exe
         asset_name: broadcast-windows-amd64.exe
         asset_content_type: application/octet-stream
