--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,26 +24,12 @@ jobs:
         GOOS=darwin GOARCH=amd64 go build -ldflags="-s -w" -o broadcast_darwin .
         GOOS=windows GOARCH=amd64 go build -ldflags="-s -w" -o broadcast_windows.exe .
 
-    - name: Upload Linux binary
-      uses: actions/upload-release-asset@v1
+    - name: Create Release
+      uses: softprops/action-gh-release@v1
       with:
-        upload_url: ${{ github.event.release.upload_url }}
-        asset_path: broadcast_linux
-        asset_name: broadcast-linux-amd64
-        asset_content_type: application/octet-stream
-
-    - name: Upload macOS binary
-      uses: actions/upload-release-asset@v1
-      with:
-        upload_url: ${{ github.event.release.upload_url }}
-        asset_path: broadcast_darwin
-        asset_name: broadcast-darwin-amd64
-        asset_content_type: application/octet-stream
-
-    - name: Upload Windows binary
-      uses: actions/upload-release-asset@v1
-      with:
-        upload_url: ${{ github.event.release.upload_url }}
-        asset_path: broadcast_windows.exe
-        asset_name: broadcast-windows-amd64.exe
-        asset_content_type: application/octet-stream
+        files: |
+            dist/broadcast-linux-amd64
+            dist/broadcast-darwin-amd64
+            dist/broadcast-windows-amd64.exe
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
