--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,9 +20,9 @@ jobs:
     - name: Build binaries
       run: |
         mkdir dist
-        GOOS=linux GOARCH=amd64 go build -ldflags="-s -w" -o broadcast_linux .
-        GOOS=darwin GOARCH=amd64 go build -ldflags="-s -w" -o broadcast_darwin .
-        GOOS=windows GOARCH=amd64 go build -ldflags="-s -w" -o broadcast_windows.exe .
+        GOOS=linux GOARCH=amd64 go build -ldflags="-s -w" -o dist/broadcast_linux .
+        GOOS=darwin GOARCH=amd64 go build -ldflags="-s -w" -o dist/broadcast_darwin .
+        GOOS=windows GOARCH=amd64 go build -ldflags="-s -w" -o dist/broadcast_windows.exe .
 
     - name: Create Release
       uses: softprops/action-gh-release@v1
