--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,11 @@
 name: Build and Release
 
 on:
-    release:
-      types: [published]
+  release:
+    types: [published]
+
+permissions:
+  contents: write
 
 jobs:
   build:
@@ -20,16 +23,16 @@ jobs:
     - name: Build binaries
       run: |
         mkdir dist
-        GOOS=linux GOARCH=amd64 go build -ldflags="-s -w" -o dist/broadcast_linux .
-        GOOS=darwin GOARCH=amd64 go build -ldflags="-s -w" -o dist/broadcast_darwin .
-        GOOS=windows GOARCH=amd64 go build -ldflags="-s -w" -o dist/broadcast_windows.exe .
+        GOOS=linux GOARCH=amd64 go build -ldflags="-s -w" -o dist/broadcast-linux-amd64 .
+        GOOS=darwin GOARCH=amd64 go build -ldflags="-s -w" -o dist/broadcast-darwin-amd64 .
+        GOOS=windows GOARCH=amd64 go build -ldflags="-s -w" -o dist/broadcast-windows-amd64.exe
 
     - name: Create Release
       uses: softprops/action-gh-release@v1
       with:
         files: |
-            dist/broadcast_linux
-            dist/broadcast_darwin
-            dist/broadcast_windows.exe
+          dist/broadcast-linux-amd64
+          dist/broadcast-darwin-amd64
+          dist/broadcast-windows-amd64.exe
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
