--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,10 +22,8 @@ jobs:
 
     - name: Build binaries
       run: |
-        mkdir dist
-        GOOS=linux GOARCH=amd64 go build -ldflags="-s -w" -o dist/broadcast-linux-amd64 .
-        GOOS=darwin GOARCH=amd64 go build -ldflags="-s -w" -o dist/broadcast-darwin-amd64 .
-        GOOS=windows GOARCH=amd64 go build -ldflags="-s -w" -o dist/broadcast-windows-amd64.exe
+        GOOS=linux GOARCH=amd64 go build -ldflags="-s -w" -o broadcast-linux-amd64 .
+        GOOS=windows GOARCH=amd64 go build -ldflags="-s -w" -o broadcast-windows-amd64.exe
       env:
         CGO_ENABLED: 1
 
@@ -33,8 +31,7 @@ jobs:
       uses: softprops/action-gh-release@v1
       with:
         files: |
-          dist/broadcast-linux-amd64
-          dist/broadcast-darwin-amd64
-          dist/broadcast-windows-amd64.exe
+          broadcast-linux-amd64
+          broadcast-windows-amd64.exe
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
