--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    container:
+        image: docker.elastic.co/beats-dev/golang-crossbuild:1.22.3-main-debian12
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
